--- a/css/general.css
+++ b/css/general.css
@@ -14,7 +14,7 @@
   margin-top: 70px;
 }
 
-
-#filters {
-  margin-bottom: 1em;
+/* Set a minimum height for cols */
+[class*="col-"] {
+  min-height: 15em;
 }
