--- a/css/charts/barchart.css
+++ b/css/charts/barchart.css
@@ -8,9 +8,14 @@ text {
   font-size: 10px;
 }
 
-line, path.domain {
-  stroke: #f00;
+line,
+path.domain {
+  stroke: #513ace;
   fill: none;
   stroke-opacity: .75;
   shape-rendering: crispEdges;
+}
+
+rect.bar {
+  fill: rgb(73, 125, 188);
 }
