--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,43 @@
 .row-band-col-4 { border-left: 17px solid #EC971F; }
 .row-band-col-5 { border-left: 17px solid #C9302C; }
 
+
+/*
+ * Five col layout
+ * Taken from http://stackoverflow.com/questions/10387740/five-equal-columns-in-twitter-bootstrap
+ */
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 992px) {
+    .col-md-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
 /*
  * Tooltip styles from
  * https://rawgit.com/Caged/d3-tip/master/examples/example-styles.css
