--- a/css/charts/rowchart.css
+++ b/css/charts/rowchart.css
@@ -1,3 +1,8 @@
+/*
+ * This file is called via JS and inlined in the SVG.
+ * It is not included via a <script> tag in the HTML.
+ * This allows it to be included in the download SVG feature.
+ */
 text {
   font-size: 10px;
 }
